<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:myapp="http://schemas.android.com/apk/org.panbox.mobile.android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:gravity="center_horizontal">
    
    <TextView
		android:id="@+id/assistent_title"
   		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:text="@string/assistent_title_text"
		android:gravity="center_horizontal"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:textStyle="bold"
		android:textSize="25sp"/>
            
    <TextView
		android:id="@+id/qr_scanner_instruction"
   		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:text="@string/qr_scanner_instruction_text"
		android:layout_gravity="center_horizontal"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="1dp"
        android:gravity="center">
        
        <org.panbox.mobile.android.gui.activity.FixedAspectLayout
		    android:id="@+id/qr_scanner"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_gravity="center"
		    app:aspectRatio="1.778" />
	           	
	</LinearLayout>        
   	
   	<Button 
            android:id="@+id/man_pairing_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/man_pairing_btn_text"/>

</LinearLayout>